--- a/AN/AN/AN.csproj
+++ b/AN/AN/AN.csproj
@@ -110,6 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera.cs" />
     <Compile Include="Mousedraggable.cs" />
     <Compile Include="Nerd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
